# scryfall-mcp

./: .dxtignore  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  CONFIGURATION_UPDATE.md  DXT_README.md  PRINTING_README.md  README.md  eslint.config.js  jest.config.cjs  jest.config.js  manifest.json  package-lock.json  package.json  pyproject.toml  settings.json  tsconfig.json  tsconfig.test.json  validate-dxt.js
.github/workflows/: ci.yml  pytest.yml
.reference/: build_errors.md  mcp-server-Scryfall MCP Server.txt
assets/: icon_placeholder.txt
docs/: api-usage.md  graph-schema.md
src/: bulkOperations.ts  config.py  config.ts  database.ts  db_bulk_operations.py  db_manager.py  downloadManager.ts  fileManager.ts  file_manager.py  index.ts  json_download.py  logger.ts  print_card.py  scryfallClient.ts  scryfall_art.py  scryfall_art_download.py  scryfall_art_optimized.py  scryfall_card_download.py  scryfall_search.py  server.ts  test_db.py  test_search.py  types.ts  windowsWrapper.js
src/cli/: bulk-operations.ts  database.ts  index.ts  search.ts
src/config/: index.ts
src/lib/: art-download.ts  card-download.ts  database-operations.ts  database.ts  scryfall-api.ts  utils.ts
src/mcp/: resources.ts  scryfall_server.py  server.ts  tools.ts
src/printing/: __init__.py  base_printer.py  config.py  unix_printer.py
src/resources/: cardResources.ts  cards.ts  (+3 more)
src/scryfall_mcp/: __init__.py  pyproject.toml  scryfall_mcp.py
test/: setup.ts
tests/: database.test.ts  integration.test.ts  scryfall-api.test.ts  search.test.ts  setup.ts  tools.test.ts
(+24 files in other folders)
