[project]
name = "mcp"
version = "0.0.1"
description = "A Model Context Protocol (MCP) server that provides access to the Scryfall API for Magic: The Gathering card data."
readme = "README.md"
authors = [
    { name = "Charlie Rogers", email = "charlie.rogers@fearnworks.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcp = "mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
